stylesheets/main.css
html,
body {
}

h1 {
  font-variant: small-caps;
}

h1,
h2 {
  font-family: "Alegreya", "Georgia";
  color: #e2c044;
}

body {
  background: #1e2019;
  font-family: "Alegreya Sans", -apple-system, sans-serif;
  font-size: 1.4em;
  line-height: 1.44;
  color: #d3d0cb;
  margin: 20px auto;
  padding: 2em;
  max-width: 800px;
}

a:hover {
  background: #587b7f;
}

a {
  color: #d3d0cb;
}

a:visited {
  color: #d3d0cb;
}

code {
  font-family: "SF Mono", "Menlo", monospace;
  font-size: 0.84em;
}

img {
  margin: 0 24px 0 0;
  float: left;
  height: 120px;
  width: 120px;
  border-radius: 16px;
  display: inline-flex;
  box-shadow: 0px 2px 4px #393e41;
}

